Progetto Sistemato con Ing Compagno

--- a/projectwork-ear/pom.xml
+++ b/projectwork-ear/pom.xml
@@ -5,6 +5,130 @@
     <artifactId>projectwork</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>projectwork-ear</artifactId>
   <packaging>ear</packaging>
+  <artifactId>projectwork-ear</artifactId>
+	<build>
+		<plugins>
+		
+		
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-package</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>${project.groupId}</groupId>
+									<artifactId>${project.artifactId}</artifactId>
+									<version>${project.version}</version>
+									<type>${project.packaging}</type>
+									<destFileName>${project.artifactId}.${project.packaging}</destFileName>
+								</artifactItem>
+							</artifactItems>
+							<outputDirectory>../dist/</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			
+			 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-ear-plugin</artifactId>
+				<configuration>
+					<displayName>projectwork-ear</displayName>
+					<description>projectwork-ear</description>
+					<finalName>projectwork-ear</finalName>
+					<version>6</version>
+					<defaultLibBundleDir>invokers</defaultLibBundleDir>
+					<modules>
+						<ejbModule>
+							<groupId>it.eng.unipa.projectwork</groupId>
+							<artifactId>projectwork-service</artifactId>
+							<bundleFileName>projectwork-service.jar</bundleFileName>
+						</ejbModule>
+						<ejbModule>
+							<groupId>it.eng.unipa.projectwork</groupId>
+							<artifactId>projectwork-eis</artifactId>
+							<bundleFileName>projectwork-eis.jar</bundleFileName>
+						</ejbModule>
+						<ejbModule>
+							<groupId>it.eng.unipa.projectwork</groupId>
+							<artifactId>projectwork-channel-websocket</artifactId>
+							<bundleFileName>projectwork-channel-websocket.jar</bundleFileName>
+						</ejbModule>
+						<ejbModule>
+							<groupId>it.eng.unipa.projectwork</groupId>
+							<artifactId>projectwork-channel-email</artifactId>
+							<bundleFileName>projectwork-channel-email.jar</bundleFileName>
+						</ejbModule>
+						<webModule>
+							<groupId>it.eng.unipa.projectwork</groupId>
+							<artifactId>projectwork-ws</artifactId>
+							<contextRoot>/projectwork-ws</contextRoot>
+						</webModule>
+						<webModule>
+							<groupId>it.eng.unipa.projectwork</groupId>
+							<artifactId>projectwork-web</artifactId>
+							<contextRoot>/projectwork-web</contextRoot>
+						</webModule>
+					</modules>
+					<!-- 
+					<archive>
+						<addMavenDescriptor>false</addMavenDescriptor>
+						<manifestEntries>
+							<Implementation-Version>0.0.1-SNAPSHOT</Implementation-Version>
+							<SCM-Revision>0</SCM-Revision>
+							<Dependencies>org.jboss.msc,org.jboss.as.clustering.singleton,org.jboss.remote-naming,org.hornetq,org.hibernate</Dependencies>
+						</manifestEntries>
+					</archive>
+					 -->
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>it.eng.unipa.projectwork</groupId>
+			<artifactId>projectwork-service</artifactId>
+			<version>${project.version}</version>
+			<type>ejb</type>
+		</dependency>
+		<dependency>
+			<groupId>it.eng.unipa.projectwork</groupId>
+			<artifactId>projectwork-eis</artifactId>
+			<version>${project.version}</version>
+			<type>ejb</type>
+		</dependency>
+		<dependency>
+			<groupId>it.eng.unipa.projectwork</groupId>
+			<artifactId>projectwork-ws</artifactId>
+			<version>${project.version}</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>it.eng.unipa.projectwork</groupId>
+			<artifactId>projectwork-web</artifactId>
+			<version>${project.version}</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>it.eng.unipa.projectwork</groupId>
+			<artifactId>projectwork-channel-websocket</artifactId>
+			<version>${project.version}</version>
+			<type>ejb</type>
+		</dependency>
+		<dependency>
+			<groupId>it.eng.unipa.projectwork</groupId>
+			<artifactId>projectwork-channel-email</artifactId>
+			<version>${project.version}</version>
+			<type>ejb</type>
+		</dependency>
+	</dependencies>
 </project>
