--- a/projectwork-eis/pom.xml
+++ b/projectwork-eis/pom.xml
@@ -34,6 +34,11 @@
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>
+       <dependency>
+       	<groupId>commons-io</groupId>
+       	<artifactId>commons-io</artifactId>
+       	<version>2.2</version>
+       </dependency>
   </dependencies>
   
   <build>
