--- a/projectwork-eis/pom.xml
+++ b/projectwork-eis/pom.xml
@@ -39,6 +39,11 @@
        	<artifactId>commons-io</artifactId>
        	<version>2.2</version>
        </dependency>
+       <dependency>
+       	<groupId>org.jsoup</groupId>
+       	<artifactId>jsoup</artifactId>
+       	<version>1.8.3</version>
+       </dependency>
   </dependencies>
   
   <build>
